--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,7 @@ button {
 .rich-editor-scroll .ProseMirror {
   flex: 1;
   min-height: 100%;
-  padding: 16px 20px;
+  padding: 16px 20px 16px 44px;
   font-size: 24px;
   line-height: 1.7;
   outline: none;
@@ -101,6 +101,7 @@ button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  margin-left: -30px;
   margin-right: 6px;
   padding: 0;
   vertical-align: middle;
